:adhesive_bandage: fix scroll margins on tablets

--- a/static/css/base.css
+++ b/static/css/base.css
@@ -116,3 +116,10 @@ strong {
 .anchor {
     scroll-margin-top: 85px;
 }
+
+/* Tablet breakpoint */
+@media screen and (min-width: 768px) {
+    .anchor {
+        scroll-margin-top: 20px;
+    }
+}
